--- a/index.html
+++ b/index.html
@@ -153,18 +153,14 @@
           <h2 class="featurette-heading fw-normal lh-1">Come closer my friend... <br> <span class="text-muted">It’ll blow
               your mind.</span></h2>
           <p class="lead"> And now, what you've all been waiting for : the one and only ISS on the Earth map. Crazy, right ?!</p>
-          <ul>
-
+          <ul id="ul" class="lead">
             <li id="latitude"></li>
             <li id="longitude"></li>
             <li id="altitude"></li>
             <li id="speed"></li>
             <li id="visibility"></li>
-            <li id="timing"> </li>
-           
+            <li id="timing"></li>
            </ul>
-
-        
         </div>
         <div class="ctr col-12 col-sm-12 col-md-12 col-lg-7">
           <div id="map"></div>
